@@ -259,10 +259,6 @@ See https://maven.apache.org/plugins/maven-jar-plugin/examples/create-test-jar.h
     	    <exclude>com/bigdata/TestAll.java</exclude>
 	    <exclude>com/bigdata/bfs/TestAll.java</exclude>
 	  </excludes>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
-          <basedir>.</basedir>
-          <argLine>-Xmx4g -XX:+UseMembar -XX:MaxPermSize=256m</argLine>
         </configuration>
       </plugin>
       <plugin>
